php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #21309 ftp_connect error reporting of trivial errors trough perror()
Submitted: 2002-12-31 04:50 UTC Modified: 2003-01-06 20:47 UTC
From: tit dot petric at telemach dot net Assigned: sesser (profile)
Status: Closed Package: FTP related
PHP Version: 4.3.0 OS: linux
Private report: No CVE-ID: None
 [2002-12-31 04:50 UTC] tit dot petric at telemach dot net
ftp_connect() returns stream or false on error

this is not the case for error messages like "connect: Connection timed out" which go trough perror() calls inside the extension

theese should be actively removed or replaced with E_WARNING or E_NOTICE errors which can be actively ignored/handled by script.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-12-31 04:53 UTC] derick@php.net
Verified, the whole FTP code uses perror() and not php_error_docref(). It also makes use of free() and malloc() and doesn't use the zend memory manager for it.

Derick
 [2003-01-02 19:30 UTC] nicos@php.net
Note: I just sent a patch for it to php-dev. 

Thank you for reviewing it.
 [2003-01-06 20:47 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 04 00:00:02 2026 UTC