Changed perror() to php_error_docref(), fixed bug #21309. Made extension use ZE memory allocation wrappers, fixed a memory leak in ftp_mkdir. Removed duplicate ftp_syst() call inside ftp_systype().

# A larger patch with CS fixes will be applied to HEAD shortly.